tests/fixtures/invalid/switch_comma_case_label.c
int main(void) {
    switch (2) {
    case (1, 2):
        return 1;
    default:
        return 0;
    }
}
